--- a/style.css
+++ b/style.css
@@ -76,18 +76,18 @@ h1 {
   padding-bottom: 10px;
 }
 .info {
-  background-color: blue;
+  background-color: rgb(248, 249, 249);
   min-height: 750px;
 }
 .recomendation {
-  background-color: red;
+  background-color: white;
   min-height: 750px;
 }
 .callToAction {
-  background-color: green;
+  background-color: rgb(76, 100, 255);
   min-height: 400px;
 }
 .footer {
-  background-color: yellow;
+  background-color: rgb(248, 249, 249);
   min-height: 400px;
 }
