--- a/style.css
+++ b/style.css
@@ -1,55 +1,65 @@
-html,
-body {
+* {
   margin: 0;
+  padding: 0;
 }
 
-.header {
+.container {
   display: grid;
   grid-template-areas:
-    "header"
+    "top"
     "hero"
     "info"
-    "recomendation"
+    "recommendation"
     "callToAction"
     "footer";
 }
 .top {
-  grid-area: header;
+  grid-area: top;
   position: fixed;
   width: 100%;
   display: flex;
   background-color: white;
-  height: 80px;
+  height: 92px;
   justify-content: space-between;
+  align-items: center;
 }
-
 .logo {
   filter: invert(80%);
-  margin-left: 50px;
-  height: 70px;
+  margin-left: 60px;
+  margin-right: 10px;
+  height: 75px;
 }
+
 .nav {
   display: flex;
   gap: 20px;
-  margin-right: 50px;
+  margin-right: 60px;
   align-items: center;
 }
 
 .link {
   text-decoration: none;
-  color: black;
-  font-weight: 600;
+  color: rgb(43, 47, 47);
+  font-weight: 500;
   font-size: large;
+  font-family: "Roboto Condensed", sans-serif;
 }
 .apply-button {
-  padding: 10px 20px;
-  background-color: #007bff;
+  padding: 8px 24px;
+  background-color: rgb(76, 100, 255);
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   font-size: 16px;
   font-size: large;
   text-decoration: none;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.apply-button:hover {
+  background-color: rgba(0, 86, 179, 0.7);
 }
 
 .hero {
@@ -61,33 +71,56 @@ body {
   color: white;
   text-align: center;
   min-height: 750px;
-  padding-top: 200px;
+  padding-top: 300px;
 }
 
-h1 {
+.hero h1 {
   font-size: 85px;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
 }
-.h2 {
+.hero h2 {
   font-size: 20px;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 .info {
+  grid-area: info;
   background-color: rgb(248, 249, 249);
-  min-height: 750px;
+  min-height: 700px;
 }
-.recomendation {
-  background-color: white;
-  min-height: 750px;
+.recommendation {
+  grid-area: recommendation;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  min-height: 700px;
+  padding-left: 191px;
+  padding-right: 191px;
+}
+
+.recommendation-box {
+  display: flex;
+  align-items: center;
+  padding-top: 80px;
+  flex-direction: column;
+}
+.recommendation-box h2 {
+  font-size: 30px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 500;
+  color: rgb(43, 47, 47);
+}
+.studentPic {
+  height: 330px;
 }
 .callToAction {
+  grid-area: callToAction;
   background-color: rgb(76, 100, 255);
   min-height: 400px;
 }
 .footer {
+  grid-area: footer;
   background-color: rgb(248, 249, 249);
   min-height: 400px;
 }
