--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@
   font-weight: 500;
   font-size: large;
   font-family: "Roboto Condensed", sans-serif;
+  margin-right: 10px;
+}
+.chevron {
+  width: 15px;
+  margin-left: 5px;
 }
 .apply-button {
   padding: 8px 24px;
@@ -70,7 +75,7 @@
   background-repeat: no-repeat;
   color: white;
   text-align: center;
-  min-height: 750px;
+  min-height: 600px;
   padding-top: 300px;
 }
 
@@ -87,37 +92,170 @@
 }
 .info {
   grid-area: info;
+  display: grid;
   background-color: rgb(248, 249, 249);
+  grid-template-columns: repeat(2, 1fr);
   min-height: 700px;
 }
-.recommendation {
+.info-box1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-box2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-right: 200px;
+}
+.info-box2 h3 {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.info-box2 h2 {
+  margin-bottom: 30px;
+  font-size: 40px;
+  font-weight: 600;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.info-box2 p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 60px;
+}
+.info-apply {
+  padding: 12px 24px;
+  background-color: #2b2f2f;
+  color: white;
+  border-radius: 25px;
+  border: solid 1px;
+  font-size: 16px;
+  font-size: large;
+  text-decoration: none;
+  font-family: "Roboto Condensed", sans-serif;
+  margin-right: 30px;
+}
+.info-apply:hover {
+  background-color: rgb(248, 249, 249);
+  color: #2b2f2f;
+  border: solid 1px;
+  border-color: #2b2f2f;
+}
+.info-button {
+  padding: 12px 24px;
+  border-color: #2b2f2f;
+  color: #2b2f2f;
+  border: solid 1px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-size: large;
+  text-decoration: none;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.info-button:hover {
+  background-color: #2b2f2f;
+  color: rgb(248, 249, 249);
+  border: solid 1px;
+  border-color: #2b2f2f;
+}
+.modell {
+  width: 550px;
+}
+
+.recommendation-container {
   grid-area: recommendation;
   display: grid;
+  padding-left: 50px;
+  padding-right: 50px;
+  box-sizing: border-box;
+}
+.recommendation-container h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recommendation {
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
+  max-width: 100%;
   min-height: 700px;
-  padding-left: 191px;
-  padding-right: 191px;
+  gap: 40px;
 }
 
 .recommendation-box {
   display: flex;
   align-items: center;
+
   padding-top: 80px;
   flex-direction: column;
+  padding-bottom: 100px;
 }
-.recommendation-box h2 {
-  font-size: 30px;
+.recommendation-container h2 {
+  font-size: 35px;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
   color: rgb(43, 47, 47);
+  margin-top: 80px;
+}
+
+.recommendation-box h3 {
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 500;
+  color: rgb(43, 47, 47);
+  margin-bottom: 20px;
+}
+.recommendation-box p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 30px;
 }
 .studentPic {
   height: 330px;
 }
 .callToAction {
+  display: grid;
   grid-area: callToAction;
+  grid-template-columns: repeat(2, 1fr);
   background-color: rgb(76, 100, 255);
-  min-height: 400px;
+  min-height: 700px;
+}
+.callToAction-box {
+  display: flex;
+  margin-left: 130px;
+  margin-right: 50px;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+}
+.callToAction-box h3 {
+  font-size: 25px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.callToAction-box h2 {
+  font-size: 50px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+.callToAction-box p {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+.callToAction-box-video {
+  height: 600px;
+  border-radius: 25px;
+  margin-right: 100px;
 }
 .footer {
   grid-area: footer;
